I'm still testing this website haha

--- a/about.html
+++ b/about.html
@@ -212,7 +212,7 @@
   </div><!-- /.content-fluid -->
 
   <!-- Social media and contact -->
-  <section id="contact" class="contact-social py-5">
+  <section id="contact" class="contact-social">
     <div class="container px-5">
       <div class="row text-light text-center align-items-center">
         <div class="col-lg-6 flex-column justify-content-center">
@@ -220,9 +220,9 @@
             <h5 class="card-title">Visita nuestras Redes Sociales</h5>
           </div>
           <div class="p-2 justify-content-center">
-            <a href="https://www.facebook.com/KeidasTechnology"><i class="fab fa-facebook-f fa-2x px-2 obj-zoom-in"></i></a>
-            <a href="https://www.instagram.com/keidastechnology"><i class="fab fa-instagram fa-2x px-2 obj-zoom-in"></i></a>
-            <a href="https://twitter.com/Keidas_Tech"><i class="fab fa-twitter fa-2x px-2 obj-zoom-in"></i></a>
+            <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/KeidasTechnology"><i class="fab fa-facebook-f fa-2x px-2 obj-zoom-in"></i></a>
+            <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/keidastechnology"><i class="fab fa-instagram fa-2x px-2 obj-zoom-in"></i></a>
+            <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/Keidas_Tech"><i class="fab fa-twitter fa-2x px-2 obj-zoom-in"></i></a>
           </div>
           <div class="d-lg-none">
             <hr>
@@ -240,8 +240,17 @@
             <i class="fab fa-whatsapp px-2"></i> 55-67-84-50-17
           </div>
           <div class="p-2">
-            <a href="https://www.messenger.com/t/KeidasTechnology"><i class="fab fa-facebook-messenger px-2"></i> Messenger</a>
+            <a target="_blank" rel="noopener noreferrer" href="https://www.messenger.com/t/KeidasTechnology"><i class="fab fa-facebook-messenger px-2"></i> Messenger</a>
           </div>
+        </div>
+      </div>
+      <hr>
+      <div class="row text-center align-items-center py-2">
+        <div class="col-lg-6 flex-column justify-content-center">
+          <a class="nav-link text-light" href="#">Preguntas Frecuentes</a>
+        </div>
+        <div class="col-lg-6 flex-column justify-content-center">
+          <a class="nav-link text-light" href="#">Terminos y condiciones</a>
         </div>
       </div>
     </div>
