--- a/projects.html
+++ b/projects.html
@@ -75,45 +75,42 @@
       <div class="row">
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+            <img class="img-fluid" src="images/site/s3d_r_01.png" alt="">
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Péndulo invertido con control LQR, encoder óptico, microcontrolador Texas Instruments, con piezas impresas en 3D.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button id="btn1" type="button" class="btn btn-sm btn-outline-secondary" onclick="clickg(this.id)">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  <button id="btn1" type="button" class="btn btn-sm btn-outline-secondary" onclick="clickg(this.id)">Fotos</button>
                 </div>
-                <small class="text-muted">9 mins</small>
+                <small class="text-muted">Control Automático</small>
               </div>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+            <img class="img-fluid" src="images/site/s3d_r_01.png" alt="">
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Aplicacion Android para el calculo de proporcionamieto de mezclas de concreto, incluye modo básico y modo pro.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  <button id="btn1" type="button" class="btn btn-sm btn-outline-secondary" onclick="clickg(this.id)">Fotos</button>
                 </div>
-                <small class="text-muted">9 mins</small>
+                <small class="text-muted">Android</small>
               </div>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+            <img class="img-fluid" src="images/site/s3d_r_01.png" alt="">
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Software para realizar el Fallo en Licitaciones publicas.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  <button id="btn1" type="button" class="btn btn-sm btn-outline-secondary" onclick="clickg(this.id)">Fotos</button>
                 </div>
-                <small class="text-muted">9 mins</small>
+                <small class="text-muted">Software Development</small>
               </div>
             </div>
           </div>
@@ -219,7 +216,7 @@
   </a>
 
   <!-- Social media and contact -->
-  <section id="contact" class="contact-social py-5">
+  <section id="contact" class="contact-social">
     <div class="container px-5">
       <div class="row text-light text-center align-items-center">
         <div class="col-lg-6 flex-column justify-content-center">
@@ -227,9 +224,9 @@
             <h5 class="card-title">Visita nuestras Redes Sociales</h5>
           </div>
           <div class="p-2 justify-content-center">
-            <a href="https://www.facebook.com/KeidasTechnology"><i class="fab fa-facebook-f fa-2x px-2 obj-zoom-in"></i></a>
-            <a href="https://www.instagram.com/keidastechnology"><i class="fab fa-instagram fa-2x px-2 obj-zoom-in"></i></a>
-            <a href="https://twitter.com/Keidas_Tech"><i class="fab fa-twitter fa-2x px-2 obj-zoom-in"></i></a>
+            <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/KeidasTechnology"><i class="fab fa-facebook-f fa-2x px-2 obj-zoom-in"></i></a>
+            <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/keidastechnology"><i class="fab fa-instagram fa-2x px-2 obj-zoom-in"></i></a>
+            <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/Keidas_Tech"><i class="fab fa-twitter fa-2x px-2 obj-zoom-in"></i></a>
           </div>
           <div class="d-lg-none">
             <hr>
@@ -247,8 +244,17 @@
             <i class="fab fa-whatsapp px-2"></i> 55-67-84-50-17
           </div>
           <div class="p-2">
-            <a href="https://www.messenger.com/t/KeidasTechnology"><i class="fab fa-facebook-messenger px-2"></i> Messenger</a>
+            <a target="_blank" rel="noopener noreferrer" href="https://www.messenger.com/t/KeidasTechnology"><i class="fab fa-facebook-messenger px-2"></i> Messenger</a>
           </div>
+        </div>
+      </div>
+      <hr>
+      <div class="row text-center align-items-center py-2">
+        <div class="col-lg-6 flex-column justify-content-center">
+          <a class="nav-link text-light" href="#">Preguntas Frecuentes</a>
+        </div>
+        <div class="col-lg-6 flex-column justify-content-center">
+          <a class="nav-link text-light" href="#">Terminos y condiciones</a>
         </div>
       </div>
     </div>
