--- a/services_pcb.html
+++ b/services_pcb.html
@@ -159,39 +159,35 @@
 
     <div class="team">
       <div class="text-light text-center">
-        <h3 class="text-bold">Parametros de Manufactura</h3>
+        <h3 class="text-bold">Especificaciones para manufactura</h3>
         <hr class="featurette-divider container">
       </div>
       <div class="text-gray container">
-        <h5 class="text-bold">Modelado por Deposición Fundida:</h5>
+        <!-- <h5 class="text-bold">Modelado por Deposición Fundida:</h5> -->
       </div>
-      <table class="container table table-striped table-dark">
+      <table class="container rounded table table-striped table-dark">
         <thead>
           <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
+            <th scope="col">Parámetro</th>
+            <th scope="col">Valor</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
+            <td>Ancho mínimo de pista</td>
+            <td>0.25[mm]</td>
           </tr>
           <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
+            <td>Separación mínima entre pistas</td>
+            <td>0.25[mm]</td>
           </tr>
           <tr>
-            <th scope="row">3</th>
-            <td>Larry</td>
-            <td>the Bird</td>
-            <td>@twitter</td>
+            <td>Diámetro mínimo de perforación</td>
+            <td>0.4[mm]</td>
+          </tr>
+          <tr>
+            <td>Diámetro máximo de perforación</td>
+            <td>3[mm]</td>
           </tr>
         </tbody>
       </table>
@@ -200,7 +196,7 @@
   </section>
 
   <!-- Social media and contact -->
-  <section id="contact" class="contact-social py-5">
+  <section id="contact" class="contact-social">
     <div class="container px-5">
       <div class="row text-light text-center align-items-center">
         <div class="col-lg-6 flex-column justify-content-center">
@@ -208,9 +204,9 @@
             <h5 class="card-title">Visita nuestras Redes Sociales</h5>
           </div>
           <div class="p-2 justify-content-center">
-            <a href="https://www.facebook.com/KeidasTechnology"><i class="fab fa-facebook-f fa-2x px-2 obj-zoom-in"></i></a>
-            <a href="https://www.instagram.com/keidastechnology"><i class="fab fa-instagram fa-2x px-2 obj-zoom-in"></i></a>
-            <a href="https://twitter.com/Keidas_Tech"><i class="fab fa-twitter fa-2x px-2 obj-zoom-in"></i></a>
+            <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/KeidasTechnology"><i class="fab fa-facebook-f fa-2x px-2 obj-zoom-in"></i></a>
+            <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/keidastechnology"><i class="fab fa-instagram fa-2x px-2 obj-zoom-in"></i></a>
+            <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/Keidas_Tech"><i class="fab fa-twitter fa-2x px-2 obj-zoom-in"></i></a>
           </div>
           <div class="d-lg-none">
             <hr>
@@ -228,8 +224,17 @@
             <i class="fab fa-whatsapp px-2"></i> 55-67-84-50-17
           </div>
           <div class="p-2">
-            <a href="https://www.messenger.com/t/KeidasTechnology"><i class="fab fa-facebook-messenger px-2"></i> Messenger</a>
+            <a target="_blank" rel="noopener noreferrer" href="https://www.messenger.com/t/KeidasTechnology"><i class="fab fa-facebook-messenger px-2"></i> Messenger</a>
           </div>
+        </div>
+      </div>
+      <hr>
+      <div class="row text-center align-items-center py-2">
+        <div class="col-lg-6 flex-column justify-content-center">
+          <a class="nav-link text-light" href="#">Preguntas Frecuentes</a>
+        </div>
+        <div class="col-lg-6 flex-column justify-content-center">
+          <a class="nav-link text-light" href="#">Terminos y condiciones</a>
         </div>
       </div>
     </div>
