--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
   <section class="team">
     <div class="container">
       <div class="row">
-        <!-- <div class="col-lg-6 my-1 px-sm-5 px-lg-3 p-3 p-xl-4"> -->
-          <div class="col-lg-6 my-3">
+        <div class="col-lg-6 my-3">
           <div class="card bg-dark text-white p-4">
             <h4 class="card-title d-sm-none text-center">Impresión 3D</h4>
             <div class="row align-items-center">
@@ -113,8 +112,7 @@
             </div>
           </div>
         </div>
-        <!-- <div class="col-lg-6 my-1 px-sm-5 px-lg-3 p-3 p-xl-4"> -->
-          <div class="col-lg-6 my-3">
+        <div class="col-lg-6 my-3">
           <div class="card bg-dark text-white p-4">
             <h4 class="card-title d-sm-none text-center">Manufactura de PCBs</h4>
             <div class="row align-items-center">
@@ -133,10 +131,9 @@
             </div>
           </div>
         </div>
-        <!-- <div class="col-lg-6 my-1 px-sm-5 px-lg-3 p-3 p-xl-4"> -->
-          <div class="col-lg-6 my-3">
+        <div class="col-lg-6 my-3">
           <div class="card bg-dark text-white p-4">
-            <h4 class="card-title d-sm-none text-center">Cursos y Proyectos en General</h4>
+            <h4 class="card-title d-sm-none text-center">Proyectos en General</h4>
             <img src="images/site/it.png" class="card-img-top rounded img-thumbnail" alt="...">
             <div class="card-body">
               <h4 class="card-title d-none d-sm-block">Proyectos en General</h4>
@@ -146,8 +143,7 @@
             </div>
           </div>
         </div>
-        <!-- <div class="col-lg-6 my-1 px-sm-5 px-lg-3 p-3 p-xl-4"> -->
-          <div class="col-lg-6 my-3">
+        <div class="col-lg-6 my-3">
           <div class="card bg-dark text-white p-4">
             <h4 class="card-title d-sm-none text-center">Acerca de Keidas Technology</h4>
             <img src="images/site/kt_team_crop.png" class="card-img-top rounded img-thumbnail" alt="...">
@@ -163,7 +159,7 @@
   </section>
 
   <!-- Social media and contact -->
-  <section id="contact" class="contact-social py-5">
+  <section id="contact" class="contact-social">
     <div class="container px-5">
       <div class="row text-light text-center align-items-center">
         <div class="col-lg-6 flex-column justify-content-center">
@@ -171,9 +167,9 @@
             <h5 class="card-title">Visita nuestras Redes Sociales</h5>
           </div>
           <div class="p-2 justify-content-center">
-            <a href="https://www.facebook.com/KeidasTechnology"><i class="fab fa-facebook-f fa-2x px-2 obj-zoom-in"></i></a>
-            <a href="https://www.instagram.com/keidastechnology"><i class="fab fa-instagram fa-2x px-2 obj-zoom-in"></i></a>
-            <a href="https://twitter.com/Keidas_Tech"><i class="fab fa-twitter fa-2x px-2 obj-zoom-in"></i></a>
+            <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/KeidasTechnology"><i class="fab fa-facebook-f fa-2x px-2 obj-zoom-in"></i></a>
+            <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/keidastechnology"><i class="fab fa-instagram fa-2x px-2 obj-zoom-in"></i></a>
+            <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/Keidas_Tech"><i class="fab fa-twitter fa-2x px-2 obj-zoom-in"></i></a>
           </div>
           <div class="d-lg-none">
             <hr>
@@ -191,8 +187,17 @@
             <i class="fab fa-whatsapp px-2"></i> 55-67-84-50-17
           </div>
           <div class="p-2">
-            <a href="https://www.messenger.com/t/KeidasTechnology"><i class="fab fa-facebook-messenger px-2"></i> Messenger</a>
+            <a target="_blank" rel="noopener noreferrer" href="https://www.messenger.com/t/KeidasTechnology"><i class="fab fa-facebook-messenger px-2"></i> Messenger</a>
           </div>
+        </div>
+      </div>
+      <hr>
+      <div class="row text-center align-items-center py-2">
+        <div class="col-lg-6 flex-column justify-content-center">
+          <a class="nav-link text-light" href="#">Preguntas Frecuentes</a>
+        </div>
+        <div class="col-lg-6 flex-column justify-content-center">
+          <a class="nav-link text-light" href="#">Terminos y condiciones</a>
         </div>
       </div>
     </div>
