Testing and ... testing haha

--- a/projects.html
+++ b/projects.html
@@ -73,42 +73,44 @@
     <div class="container">
 
       <div class="row">
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img class="img-fluid" src="images/site/s3d_r_01.png" alt="">
+        <div class="col-lg-4">
+          <div class="card bg-dark text-white mb-4 shadow-sm">
+            <video autoplay="true" loop="true" width="100%">
+              <source src="images/videos/p_pi_vid.mp4">
+            </video>
             <div class="card-body">
               <p class="card-text">Péndulo invertido con control LQR, encoder óptico, microcontrolador Texas Instruments, con piezas impresas en 3D.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button id="btn1" type="button" class="btn btn-sm btn-outline-secondary" onclick="clickg(this.id)">Fotos</button>
+                  <button id="btn1" type="button" class="btn btn-sm btn-outline-primary" onclick="clickg(this.id)">Fotos</button>
                 </div>
                 <small class="text-muted">Control Automático</small>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img class="img-fluid" src="images/site/s3d_r_01.png" alt="">
+        <div class="col-lg-4">
+          <div class="card bg-dark text-white mb-4 shadow-sm">
+            <img class="img-fluid" src="images/site/p_mm_front.png" alt="">
             <div class="card-body">
               <p class="card-text">Aplicacion Android para el calculo de proporcionamieto de mezclas de concreto, incluye modo básico y modo pro.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button id="btn1" type="button" class="btn btn-sm btn-outline-secondary" onclick="clickg(this.id)">Fotos</button>
+                  <button id="btn2" type="button" class="btn btn-sm btn-outline-primary" onclick="clickg(this.id)">Fotos</button>
                 </div>
                 <small class="text-muted">Android</small>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
+        <div class="col-lg-4">
+          <div class="card bg-dark text-white mb-4 shadow-sm">
             <img class="img-fluid" src="images/site/s3d_r_01.png" alt="">
             <div class="card-body">
-              <p class="card-text">Software para realizar el Fallo en Licitaciones publicas.</p>
+              <p class="card-text">Software para realizar el Fallo en Licitaciones publicas de manera ágil y sencilla.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button id="btn1" type="button" class="btn btn-sm btn-outline-secondary" onclick="clickg(this.id)">Fotos</button>
+                  <button id="btn3" type="button" class="btn btn-sm btn-outline-primary" onclick="clickg(this.id)">Fotos</button>
                 </div>
                 <small class="text-muted">Software Development</small>
               </div>
@@ -116,45 +118,42 @@
           </div>
         </div>
 
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+        <div class="col-lg-4">
+          <div class="card bg-dark text-white mb-4 shadow-sm">
+            <img class="img-fluid" src="images/site/p_rs_front.png" alt="">
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Robót Scara de 3 Grados de Libertad con motores a pasos e impresion 3D.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  <button id="btn4" type="button" class="btn btn-sm btn-outline-primary" onclick="clickg(this.id)">Fotos</button>
                 </div>
                 <small class="text-muted">9 mins</small>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
+        <div class="col-lg-4">
+          <div class="card bg-dark text-white mb-4 shadow-sm">
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Robot seguidor de línea e identificador de colores para concurso de Robótica (Talent Network) en Campus Party 2017.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  <button id="btn5" type="button" class="btn btn-sm btn-outline-light" onclick="clickg(this.id)">Fotos</button>
                 </div>
                 <small class="text-muted">9 mins</small>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
+        <div class="col-lg-4">
+          <div class="card bg-dark text-white mb-4 shadow-sm">
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                  <button id="btn6" type="button" class="btn btn-sm btn-outline-light" onclick="clickg(this.id)">Fotos</button>
                 </div>
                 <small class="text-muted">9 mins</small>
               </div>
@@ -163,7 +162,7 @@
         </div>
 
         <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
+          <div class="card bg-dark text-white mb-4 shadow-sm">
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -178,7 +177,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
+          <div class="card bg-dark text-white mb-4 shadow-sm">
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -193,7 +192,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
+          <div class="card bg-dark text-white mb-4 shadow-sm">
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -210,10 +209,6 @@
       </div>
     </div>
   </div>
-
-  <a id="closebtn" onclick="clickg(this.id)" class="float-close d-none text-danger">
-    <i class="far fa-times-circle fa-2x"></i>
-  </a>
 
   <!-- Social media and contact -->
   <section id="contact" class="contact-social">
@@ -260,21 +255,23 @@
     </div>
   </section>
 
-  <section id="is">
-    <div id="imgslider01" class="container team d-none islider">
+  <!-- Black background for image slider -->
+  <div id="bg_is" class="background_is d-none"></div>
+
+  <!-- Image Sliders for each project -->
+  <!-- Inverted Pendulum -->
+  <section id="btn1_imgslider" class="container d-none islider">
+    <div >
       <div id="carousel_01" width="500" class="carousel slide carousel-fade" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-interval="7000">
-            <img src="images/site/spcb_p_01.png" class="d-block w-100" alt="...">
+            <img src="images/site/p_pi_01.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item" data-interval="7000">
-            <img src="images/site/spcb_p_02.png" class="d-block w-100" alt="...">
+            <img src="images/site/p_pi_02.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item" data-interval="7000">
-            <img src="images/site/spcb_p_03.png" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item" data-interval="7000">
-            <img src="images/site/spcb_p_04.png" class="d-block w-100" alt="...">
+            <img src="images/site/p_pi_03.png" class="d-block w-100" alt="...">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carousel_01" role="button" data-slide="prev">
@@ -288,6 +285,35 @@
       </div>
     </div>
   </section>
+
+  <!-- Android Application -->
+  <section id="btn2_imgslider" class="container d-none islider">
+    <div>
+      <div id="carousel_02" width="500" class="carousel slide carousel-fade" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-interval="7000">
+            <img src="images/site/p_aa_01.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-interval="7000">
+            <img src="images/site/p_aa_02.png" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carousel_02" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carousel_02" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Close button for imageslider -->
+  <a id="closebtn" onclick="clickg(this.id)" class="float-close d-none text-danger">
+    <i class="far fa-times-circle fa-2x"></i>
+  </a>
 
   <!-- flotating button -->
   <a href="#top" class="float">
